// dbdiagram.io / DBML — แผนภาพความสัมพันธ์ (ไม่รัน DB โดยตรง)
// คอลัมน์และ constraint จริง — ดู schema.sql ข้างไฟล์นี้ (โฟลเดอร์ BE)

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  user_name varchar(120) [unique, not null]
  password_hash text [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table bill_from {
  id uuid [pk, default: `gen_random_uuid()`]
  street_address varchar(255) [not null]
  city varchar(120) [not null]
  post_code varchar(32) [not null]
  country varchar(120) [not null]
}

Table bill_to {
  id uuid [pk, default: `gen_random_uuid()`]
  client_name varchar(255) [not null]
  client_email varchar(255) [not null]
  street_address varchar(255) [not null]
  city varchar(120) [not null]
  post_code varchar(32) [not null]
  country varchar(120) [not null]
}

Table invoices {
  id uuid [pk, default: `gen_random_uuid()`]
  invoice_number varchar(64) [unique, not null]
  bill_from_id uuid [not null, ref: > bill_from.id]
  bill_to_id uuid [not null, ref: > bill_to.id]
  status varchar(32) [not null, note: 'draft | pending | paid']
  project_description text [null]
  invoice_date date [not null]
  payment_term varchar(32) [not null, note: 'net7 | net14 | net30 | net60']
  created_by uuid [null, ref: > users.id]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    status
    invoice_date
    created_by
  }
}

Table invoice_line_items {
  id uuid [pk, default: `gen_random_uuid()`]
  invoice_id uuid [not null, ref: > invoices.id]
  sort_order int [not null, default: 0]
  item_name varchar(255) [not null]
  quantity decimal(14,4) [not null]
  unit_price decimal(14,2) [not null]
  line_total decimal(16,2) [note: 'generated: quantity * unit_price']

  indexes {
    invoice_id
  }
}
